--- a/css/app.css
+++ b/css/app.css
@@ -58,3 +58,9 @@ h2 {
 #barcelona {
     background-color: #800000;
 }
+#marceio {
+    background-color: #008044;
+}
+#florida {
+    background-color: #cc9f9f;
+}
